--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rank-tracker",
   "version": "1.0.0",
-  "description": "WP Rank Tracker",
+  "description": "Rank Tracker",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
