--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         uses: php-actions/composer@v6
         with:
-          command: composer install --no-dev
+          dev: no
           
       - name: Release
         uses: softprops/action-gh-release@v1
