--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -31,4 +31,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            ./_infrastructure/rank-tracker.zip
+            rank-tracker.zip
