--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Zip Folder
         run: |
-          zip -r rank-tracker.zip . -x ".git/*" ".github/*" "node_modules/*" ".editorconfig" ".gitignore" "DOCKER_ENV" "docker_tag" "Dockerfile-php-build" "gulpfile.js" "openapi.json" "output.log" "package-lock.json" "package.json" "README.md" "composer.json" "composer.lock" "scripts"
+          zip -r rank-tracker.zip . -x ".git/*" ".github/*" "node_modules/*" ".editorconfig" ".gitignore" "DOCKER_ENV" "docker_tag" "Dockerfile-php-build" "gulpfile.js" "openapi.json" "output.log" "package-lock.json" "package.json" "README.md" "composer.json" "composer.lock" "scripts" "phpcs.ruleset.xml" "webpack.config.js" "vendor/php-di/phpdoc-reader/.github" "resources/css"
       
       - name: Release
         uses: softprops/action-gh-release@v1
