--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "WPCenter",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "^9.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-loader": "^9.1.3",
+    "@babel/preset-env": "^7.24.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.72.0",
     "sass-loader": "^12.6.0",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.10.1",
