--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "WPCenter",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "^9.1.3",
     "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
@@ -31,6 +31,7 @@
     "datatables.net-dt": "^1.13.2",
     "daterangepicker": "^3.1.0",
     "moment": "^2.29.4",
+    "sweetalert2": "^11.12.2",
     "tom-select": "^2.2.2",
     "uikit": "^3.15.24"
   }
